# TaskManager

./: CMakeLists.txt  README.md  task_api.cpp  task_manager.cpp
include/api_logic/: task_api.hpp
include/task_logic/: task_manager.hpp
src/: main.cpp
src/api_logic/: task_api.cpp
src/task_logic/: task_manager.cpp
